CH03/CH03_L05/echo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curl
  name: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
        - image: radial/busyboxplus:curl
          command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
          imagePullPolicy: Always
          name: echo
          ports:
            - containerPort: 5678
