CH03/CH03_L05/app.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: admin
  - port: 8090
    protocol: TCP
    name: app
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: strongjz/golang_example:0.0.2
          ports:
            - containerPort: 8080
            - containerPort: 8090
