CH03/CH03_L05/app_lb.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: app
  type: LoadBalancer
