CH03/CH03_L05/export_public.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "from-world-to-role-public"
spec:
  endpointSelector:
    matchLabels:
      role: app
  ingress:
    - fromEntities:
        - world
