CH03/CH03_L05/layer_3_netpol.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule"
spec:
  endpointSelector:
    matchLabels:
      role: mysql
  ingress:
    - fromEndpoints:
        - matchLabels:
            role: app
