CH03/CH03_L05/layer_4_netpol.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l4-rule"
spec:
  endpointSelector:
    matchLabels:
      app: app
  egress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
