CH03/CH03_L05/services_netpol.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "service-rule"
spec:
  endpointSelector:
    matchLabels:
      app: app
  egress:
    - toServices:
        - k8sService:
            serviceName: app
            namespace: mysql
